--- a/BD/pandas_recap_sol.ipynb
+++ b/BD/pandas_recap_sol.ipynb
@@ -32,18 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (1517860517.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    df = pd.read_csv('C:\\Users\\gomwo\\Desktop\\git\\python_practice\\BD\\gapminder.tsv', sep='\\t')\u001b[0m\n\u001b[1;37m                                                                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(r'C:\\Users\\gomwo\\Desktop\\git\\python_practice\\BD\\gapminder.tsv', sep='\\t')"
@@ -51,9 +42,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>year</th>\n",
+       "      <th>lifeExp</th>\n",
+       "      <th>pop</th>\n",
+       "      <th>gdpPercap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1952</td>\n",
+       "      <td>28.801</td>\n",
+       "      <td>8425333</td>\n",
+       "      <td>779.445314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>30.332</td>\n",
+       "      <td>9240934</td>\n",
+       "      <td>820.853030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>31.997</td>\n",
+       "      <td>10267083</td>\n",
+       "      <td>853.100710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>34.020</td>\n",
+       "      <td>11537966</td>\n",
+       "      <td>836.197138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Asia</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>36.088</td>\n",
+       "      <td>13079460</td>\n",
+       "      <td>739.981106</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country continent  year  lifeExp       pop   gdpPercap\n",
+       "0  Afghanistan      Asia  1952   28.801   8425333  779.445314\n",
+       "1  Afghanistan      Asia  1957   30.332   9240934  820.853030\n",
+       "2  Afghanistan      Asia  1962   31.997  10267083  853.100710\n",
+       "3  Afghanistan      Asia  1967   34.020  11537966  836.197138\n",
+       "4  Afghanistan      Asia  1972   36.088  13079460  739.981106"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -81,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +174,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "0    Afghanistan\n",
+      "1    Afghanistan\n",
+      "2    Afghanistan\n",
+      "3    Afghanistan\n",
+      "4    Afghanistan\n",
+      "Name: country, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(country_sr))\n",
     "print(country_sr.head())"
@@ -111,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -122,9 +220,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "   year       pop\n",
+      "0  1952   8425333\n",
+      "1  1957   9240934\n",
+      "2  1962  10267083\n",
+      "3  1967  11537966\n",
+      "4  1972  13079460\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(year_pop_df))\n",
     "print(year_pop_df.head())"
@@ -143,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "   year\n",
+      "0  1952\n",
+      "1  1957\n",
+      "2  1962\n",
+      "3  1967\n",
+      "4  1972\n"
+     ]
+    }
+   ],
    "source": [
     "print(type(year_df))\n",
     "print(year_df.head())"
@@ -183,11 +309,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country      Afghanistan\n",
+      "continent           Asia\n",
+      "year                1957\n",
+      "lifeExp           30.332\n",
+      "pop              9240934\n",
+      "gdpPercap      820.85303\n",
+      "Name: 1, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.loc[1])"
    ]
@@ -205,9 +345,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country      Afghanistan\n",
+      "continent           Asia\n",
+      "year                1957\n",
+      "lifeExp           30.332\n",
+      "pop              9240934\n",
+      "gdpPercap      820.85303\n",
+      "Name: 1, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.iloc[1])"
    ]
@@ -225,9 +379,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country        Zimbabwe\n",
+      "continent        Africa\n",
+      "year               2007\n",
+      "lifeExp          43.487\n",
+      "pop            12311143\n",
+      "gdpPercap    469.709298\n",
+      "Name: 1703, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "number_of_rows = df.shape[0]\n",
     "last_row_index = number_of_rows - 1\n",
@@ -247,9 +415,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country        Zimbabwe\n",
+      "continent        Africa\n",
+      "year               2007\n",
+      "lifeExp          43.487\n",
+      "pop            12311143\n",
+      "gdpPercap    469.709298\n",
+      "Name: 1703, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.iloc[-1])"
    ]
@@ -277,9 +459,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          country  year   gdpPercap\n",
+      "0     Afghanistan  1952  779.445314\n",
+      "1     Afghanistan  1957  820.853030\n",
+      "2     Afghanistan  1962  853.100710\n",
+      "3     Afghanistan  1967  836.197138\n",
+      "4     Afghanistan  1972  739.981106\n",
+      "...           ...   ...         ...\n",
+      "1699     Zimbabwe  1987  706.157306\n",
+      "1700     Zimbabwe  1992  693.420786\n",
+      "1701     Zimbabwe  1997  792.449960\n",
+      "1702     Zimbabwe  2002  672.038623\n",
+      "1703     Zimbabwe  2007  469.709298\n",
+      "\n",
+      "[1704 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.loc[:, ['country', 'year', 'gdpPercap']])"
    ]
@@ -297,11 +500,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        country  year     gdpPercap\n",
+      "0   Afghanistan  1952    779.445314\n",
+      "1   Afghanistan  1957    820.853030\n",
+      "2   Afghanistan  1962    853.100710\n",
+      "3   Afghanistan  1967    836.197138\n",
+      "4   Afghanistan  1972    739.981106\n",
+      "..          ...   ...           ...\n",
+      "95      Bahrain  2007  29796.048340\n",
+      "96   Bangladesh  1952    684.244172\n",
+      "97   Bangladesh  1957    661.637458\n",
+      "98   Bangladesh  1962    686.341554\n",
+      "99   Bangladesh  1967    721.186086\n",
+      "\n",
+      "[100 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.loc[:99, ['country', 'year', 'gdpPercap']])"
    ]
@@ -319,9 +543,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        country  year     gdpPercap\n",
+      "0   Afghanistan  1952    779.445314\n",
+      "1   Afghanistan  1957    820.853030\n",
+      "2   Afghanistan  1962    853.100710\n",
+      "3   Afghanistan  1967    836.197138\n",
+      "4   Afghanistan  1972    739.981106\n",
+      "..          ...   ...           ...\n",
+      "95      Bahrain  2007  29796.048340\n",
+      "96   Bangladesh  1952    684.244172\n",
+      "97   Bangladesh  1957    661.637458\n",
+      "98   Bangladesh  1962    686.341554\n",
+      "99   Bangladesh  1967    721.186086\n",
+      "\n",
+      "[100 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "print(df.iloc[:100, [0, 2, -1]])"
    ]
@@ -350,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,9 +637,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Occupation    Statistician\n",
+      "Born            1876-06-13\n",
+      "Died            1937-10-16\n",
+      "Age                     61\n",
+      "Name: William Gosset, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(scientists.loc['William Gosset'])"
    ]
@@ -409,9 +666,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Occupation    Statistician\n",
+      "Born            1876-06-13\n",
+      "Died            1937-10-16\n",
+      "Age                     61\n",
+      "Name: William Gosset, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
     "print(scientists.iloc[1])"
    ]
@@ -426,9 +695,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistician\n"
+     ]
+    }
+   ],
    "source": [
     "print(scientists.loc['William Gosset', 'Occupation'])"
    ]
@@ -443,9 +720,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                     Occupation        Born        Died  Age\n",
+      "Rosaline Franklin    Programmer  1920-07-25  1958-04-16   37\n",
+      "William Gosset     Statistician  1876-06-13  1937-10-16   61\n"
+     ]
+    }
+   ],
    "source": [
     "scientists.iloc[0, 0] = 'Programmer'\n",
     "print(scientists)"
@@ -473,11 +760,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Rosaline Franklin', 'William Gosset'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "print(scientists.index)"
    ]
@@ -494,11 +789,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Occupation', 'Born', 'Died', 'Age'], dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "print(scientists.columns)"
    ]
@@ -513,9 +816,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Programmer' '1920-07-25' '1958-04-16' 37]\n",
+      " ['Statistician' '1876-06-13' '1937-10-16' 61]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(scientists.values)"
    ]
